designsystem to design-system

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "designsystem-workshop",
+  "name": "design-system-workshop",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Micah Godbolt <micahgodbolt@gmail.com>",
