--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 test/unit/coverage
 test/e2e/reports
-
+backstop_data/bitmap*
+backstop_data/html_report
 selenium-debug.log
 
 # Editor directories and files
