--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sassdoc": "sassdoc ./src ./sassdoc"
   },
   "dependencies": {
+    "@storybook/addon-knobs": "^3.2.8",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
