--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
     "vtest": "backstop test --configPath=./backstop.config.js",
     "vtestApprove": "backstop approve --configPath=./backstop.config.js",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "storybook": "start-storybook -p 6006",
-    "sassdoc": "sassdoc ./src ./sassdoc"
+    "build-storybook": "build-storybook",
+    "sassdoc": "sassdoc ./src"
   },
   "dependencies": {
     "vue": "^2.4.4",
@@ -91,7 +89,7 @@
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
