--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   // When enabled, will trim trailing whitespace when you save a file.
   "files.trimTrailingWhitespace": true,
   // Controls if the editor should automatically close brackets after opening them
-  "editor.autoClosingBrackets": false,
+  "editor.autoClosingBrackets": true,
   // Controls whether the editor should render whitespace characters
   "editor.renderWhitespace": "all",
   "html.format.wrapAttributes": "force-aligned",
